change to image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/image.JPG" alt="A picture of Kenneth"></td>
+      <td><img src="images/image.png" alt="A picture of Kenneth"></td>
       <td>  <h1>Kenneth Koranteng</h1>
       <p><em>Technical Support Analyst.</em></p>
       <p>I am a <strong><a href="https://www.linkedin.com/in/kenneth-koranteng-6611a2141/">technical support analyst</a></strong> who loves football.</p></td>
